Closed Bug 535632 Opened 16 years ago Closed 16 years ago

Crash [@ nsEditor::GetIndexOf]

Categories

(Core :: DOM: Editor, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: jruderman, Assigned: masayuki)

References

Details

(Keywords: assertion, crash, testcase)

Crash Data

Attachments

(2 files)

###!!! ASSERTION: null content in nsEditor::GetIndexOf: 'content', file /Users/jruderman/mozilla-central/editor/libeditor/base/nsEditor.cpp, line 4045 ###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../../dist/include/nsCOMPtr.h, line 796
Attached patch Patch v1.0Splinter Review
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Attachment #418333 - Flags: review?(Olli.Pettay)
Comment on attachment 418333 [details] [diff] [review] Patch v1.0 Olli: Can you review this? I'm not sure who is good editor reviewer... At the testcase, the outdenting tries to get the node index of the body element. However, its parent is document node, therefore, it's crashed.
Attachment #418333 - Flags: review?(Olli.Pettay) → review+
http://hg.mozilla.org/mozilla-central/rev/35e6583db6ac Should this be fixed on the branch? I'm not sure whether this is important.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Crash Signature: [@ nsEditor::GetIndexOf]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: