 Bug 535632 Crash [@ nsEditor::GetIndexOf] r=Olli